Feature markdown UI (#30)
* feat: 组件文档样式布局

* feat: code默认展开

* feat: 侧边栏样式&semi DSM原子引入

* feat: 文档应用semi色值

* feat: 拖拽组件使用semi色值

* docs: semi token

---------

Co-authored-by: 1360151219 <zhanjingxi@ps.ink>

--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -1,12 +1,8 @@
-:root {
-  --master-text-color: #fff;
-  --primary: #1677ff;
-  --link-color: #eabe9e;
-}
 * {
   padding: 0;
   margin: 0;
 }
+
 body,
 html,
 #root {
@@ -15,25 +11,16 @@ html,
     Hiragino Sans GB, Hiragino Sans GB W3, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
     Helvetica, Arial, sans-serif;
   font-weight: 400;
-  color: var(--master-text-color);
+  color: var(--semi-color-text-0);
 }
 
 .display {
   height: auto;
 }
+
 .hidden {
   height: 0;
 }
-.demo-draggable-item {
-  color: #fff;
-  background-color: #3685f5;
-  padding: 8px 18px;
-  border-radius: 4px;
-}
-.demo-sortable-horizen {
-  padding: 8px 88px;
-}
-.demo-sortable-grid {
-  padding: 32px 40px;
-  margin: 24px;
-}
+
+
+
