--- a/packages/design/components/Skeleton/index.scss
+++ b/packages/design/components/Skeleton/index.scss
@@ -1,4 +1,4 @@
-@import '../common.scss';
+@import '../constants.scss';
 .#{$prefix}-skeleton {
   width: 100%;
   height: 100%;
@@ -27,19 +27,20 @@
     border-radius: 50%;
   }
 }
-li {
-  border-radius: 4px;
-  list-style: none;
-  display: block;
-  width: 100%;
-  height: calc(var(--skeleton-paragraph-size, 0.8) * 1rem);
-  &:first-child {
-    width: 30%;
-  }
-  &:nth-child(2) {
-    width: 60%;
-  }
-}
+// li {
+//   border-radius: 4px;
+//   list-style: none;
+//   display: block;
+//   width: 100%;
+//   height: calc(var(--skeleton-paragraph-size, 0.8) * 1rem);
+//   &:first-child {
+//     width: 30%;
+//   }
+//   &:nth-child(2) {
+//     width: 60%;
+//   }
+// }
+
 .#{$prefix}-skeleton-loading {
   background-image: linear-gradient(90deg, #f2f2f2 25%, #e6e6e6 37%, #f2f2f2 63%);
 
