--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -1,122 +1,26 @@
-:root {
-  --master-bg-color: rgb(252, 234, 220);
-  --master-deep-bg-color: #c76591;
-  --master-text-color: #fff;
-  --link-color: #eabe9e;
-}
 * {
   padding: 0;
   margin: 0;
 }
+
 body,
 html,
 #root {
   height: 100%;
-  font-family: 'Helvetica Neue', 'Gilroy ExtraBold', Times, serif;
+  font-family: system, -apple-system, BlinkMacSystemFont, PingFang SC, Segoe UI, Microsoft YaHei, wenquanyi micro hei,
+    Hiragino Sans GB, Hiragino Sans GB W3, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  color: var(--semi-color-text-0);
 }
 
-h1 {
-  padding-bottom: 20px;
-}
-h2 {
-  position: relative;
-  margin: 16px 0;
-  padding: 0 16px;
-  &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 4px;
-    height: 100%;
-    background-color: #1677ff;
-  }
-}
-h3 {
-  position: relative;
-  margin: 12px 0;
-  padding: 0 12px;
-  &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 3px;
-    height: 100%;
-    background-color: #1677ff;
-  }
-}
 .display {
   height: auto;
 }
+
 .hidden {
   height: 0;
 }
 
-.title {
-  color: #000;
-  font-size: 18px;
-}
 
 
-
-.pivot-code-box {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  margin: 16px 0;
-  overflow: hidden;
-  border: 1px solid rgba(5, 5, 5, 0.06);
-  border-radius: 6px;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-  &-actions {
-    display: flex;
-    flex-direction: row-reverse;
-    padding: 4px 8px;
-    .pivot-code-box-icon {
-      width: 20px;
-      height: 20px;
-      cursor: pointer;
-      img {
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-  &-demo {
-    padding: 24px 30px;
-    display: flex;
-    border-bottom: 1px solid rgba(5, 5, 5, 0.06);
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    > :not(.PIVOT-draggable-item) {
-      margin: 0 24px;
-    }
-  }
-
-  .line-numbers {
-    //width: 100%;
-    .code-toolbar {
-      .data-prismjs-copy {
-        //width: 70vw;
-        //width: 100%;
-        overflow: auto;
-      }
-    }
-  }
-}
-.demo-draggable-item {
-  color: #fff;
-  background-color: #3685f5;
-  padding: 8px 18px;
-  border-radius: 4px;
-}
-.demo-sortable-horizen {
-  padding: 8px 88px;
-}
-.demo-sortable-grid {
-  padding: 32px 40px;
-  margin: 24px;
-}
