fix:modal dragge position not  update

--- a/packages/design/components/Modal/components/modalcard.scss
+++ b/packages/design/components/Modal/components/modalcard.scss
@@ -1,5 +1,7 @@
-@import '../common.scss';
+@import '../../constants.scss';
+@import '../../common.scss';
 .#{$prefix}-modal-card {
+  color: #000000;
   padding: 15px;
   position: absolute;
   left: 50%;
