Feat props generator (#34)
* fix: codeblock expand

* chore: init script

* feat: generate props

* feat: generate props with table

* chore: use  asset/source instead raw-loader

* feat: props table gen

* feat: props table style

---------

Co-authored-by: 1360151219 <zhanjingxi@ps.ink>

--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -22,5 +22,29 @@ html,
   height: 0;
 }
 
+.pivot-props-table {
+  border-collapse: collapse;
+  width: 100%;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  th,
+  td {
+    padding: 18px 0;
+    text-align: center;
+  }
+  th {
+    background-color: var(--semi-color-bg-0);
+    font-weight: bold;
+    width: auto;
+    border: 2px solid var(--semi-color-border);
+  }
 
+  td {
+    width: auto;
+    border: 2px solid var(--semi-color-border);
+  }
 
+  tr {
+    background-color: var(--semi-color-bg-0);
+  }
+}
