--- a/packages/demo/src/components/_CodeBlock/index.scss
+++ b/packages/demo/src/components/_CodeBlock/index.scss
@@ -20,6 +20,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    background-color: #ffffff;
     > :not(.PIVOT-draggable-item) {
       margin: 0 24px;
     }
