--- a/packages/demo/src/pages/component/index.scss
+++ b/packages/demo/src/pages/component/index.scss
@@ -9,11 +9,21 @@
       font-size: 30px;
     }
   }
+
+  @media only screen and (min-width: 1900px) {
+    &-content {
+      justify-content: center;
+      padding: 60px 12vw;
+    }
+  }
+  @media only screen and (max-width: 1900px) {
+    &-content {
+      padding: 60px 0;
+    }
+  }
   &-content {
     display: flex;
     flex-direction: row;
-    padding: 60px 0;
-
     .demo-container {
       min-width: 240px;
       background: var(--semi-color-bg-1);
@@ -34,13 +44,12 @@
     }
     .demo-component {
       flex: 1;
-      padding: 48px;
+      padding: 48px 200px 0 68px;
       background-color: var(--semi-color-bg-0);
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       box-shadow: 0 8px 24px #0000000d;
       margin: 0;
-      margin-right: 12vw;
     }
     .demo-component-catalogue {
       .catalog_content {
