--- a/packages/demo/src/index.scss
+++ b/packages/demo/src/index.scss
@@ -1,5 +1,10 @@
+h3 {
+  margin: 55px 0 20px;
+}
+
 .pivot-props-table {
   border-collapse: collapse;
+  padding: 40px;
   width: 100%;
   font-family: Arial, sans-serif;
   font-size: 18px;
@@ -10,17 +15,15 @@
   }
   th {
     background-color: #f2f2f2;
-    font-weight: bold;
     width: auto;
-    border: 1px solid #ddd;
+    font-weight: 500;    
+    font-family: 'SFMono-Regular',Consolas,'Liberation Mono',Menlo,Courier,monospace;
+    font-size: 14px;
   }
 
   td {
     width: auto;
-    border: 1px solid #ddd;
-  }
-
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
+    border-bottom: 1px solid #ddd;
+    font-size: 14px;
   }
 }
