--- a/packages/demo/src/index.scss
+++ b/packages/demo/src/index.scss
@@ -5,6 +5,7 @@
 .pivot-props-table {
   border-collapse: collapse;
   padding: 40px;
+  margin-bottom: 20px;
   width: 100%;
   font-family: Arial, sans-serif;
   font-size: 18px;
@@ -16,8 +17,8 @@
   th {
     background-color: #f2f2f2;
     width: auto;
-    font-weight: 500;    
-    font-family: 'SFMono-Regular',Consolas,'Liberation Mono',Menlo,Courier,monospace;
+    font-weight: 500;
+    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
     font-size: 14px;
   }
 
