feat: switch组件初始化

--- a/packages/demo/src/pages/home/index.scss
+++ b/packages/demo/src/pages/home/index.scss
@@ -21,6 +21,7 @@
     }
     .navigation-wrapper {
       display: flex;
+      align-items: center;
       .navigator {
         margin: 0 20px;
         padding: 4px 24px;
