--- a/packages/design/components/Switch/index.scss
+++ b/packages/design/components/Switch/index.scss
@@ -1,5 +1,38 @@
 @import '../constants.scss';
 
 .#{$prefix}-switch {
-  color: black;
+  position: relative;
+  width: 42px;
+  height: 24px;
+  border-radius: 12px;
+  background-color: var(--semi-color-fill-2);
+  transition: background 200ms ease-in;
+
+  &.checked {
+    background-color: var(--semi-color-success);
+    .#{$prefix}-switch-pole {
+      transform: translateX(20px);
+    }
+  }
+
+  &-pole {
+    position: absolute;
+    top: 2px;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    transform: translateX(2px);
+    background-color: var(--semi-color-white);
+    transition: transform 200ms ease-in;
+  }
+  &-input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    z-index: 1;
+  }
 }
