--- a/packages/design/components/Modal/index.scss
+++ b/packages/design/components/Modal/index.scss
@@ -1,16 +1,25 @@
 @import '../constants.scss';
 @import '../common.scss';
+
 .#{$prefix}-modal {
- position: fixed;
- width: 100%;
- height: 100%;
- top: 0;
- bottom: 0;
- z-index: 999;
- right: 0;
- overflow: auto;
- &.#{$prefix}-modal-mask {
-  background-color: rgba(0, 0, 0, 0.3);
- }
- 
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+
+  .#{$prefix}-modal-mask {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.3);
+
+    &__hidden {
+      background-color: transparent;
+    }
+  }
 }
