--- a/packages/design/components/Modal/index.scss
+++ b/packages/design/components/Modal/index.scss
@@ -30,7 +30,7 @@
     height: auto;
     width: 448px;
     border-radius: 16px;
-    color: var(--semi-color-white);
+    color: var(--semi-color-text-0);
     background-color: var(--semi-color-bg-3);
 
     .#{$prefix}-modal-cancel {
