feat: tabs卡片样式&global bg token

--- a/packages/demo/src/components/_CodeBlock/index.scss
+++ b/packages/demo/src/components/_CodeBlock/index.scss
@@ -20,7 +20,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background-color: var(--semi-color-fill-0);
+    background-color: var(--semi-color-bg-2);
   }
 
   .line-numbers {
